[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "copycatbmi"
version = "0.0.4"
dependencies = [
  "numpy>=1.26.4",
  "xarray>=2024.7.0",
  "PyYAML>=6.0.3",
  "bmipy>=2.0.1"
]
authors = [
  { name="Matt Williamson" },
]
description = "A BMI module that retrieves catchment discharge values from provided NWM channel_rt output files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mattw-nws/CopyCat"
Issues = "https://github.com/mattw-nws/CopyCat/issues"